# sualw

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  tox.toml
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml
src/sualw/: __init__.py  cli.py  proc.py  registry.py  supervisor.py  tail.py
tests/: test_cli_main.py  test_cli_parse_argv.py  test_proc.py
